# cheat_guard

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
