[package]
name = "leviso-cheat-guard"
version = "0.1.3"
edition = "2021"
rust-version = "1.93"
description = "Runtime macros for cheat-aware error handling (bail, ensure, check)"
license = "MIT"
repository = "https://github.com/LevitateOS/leviso-cheat-guard"
keywords = ["testing", "error-handling", "macros"]
categories = ["development-tools::testing"]

[dependencies]
anyhow = "1.0"

# Re-export proc-macros from leviso-cheat-test
leviso-cheat-test = "0.1"
